<resources>
    <string name="app_name">AdminManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="fcm_topic">trumbien</string>
    <string name="default_notification_channel_id" translatable="false">trumbien_channel</string>
    <string name="default_notification_channel_name" translatable="true">trumbien</string>
    <string name="default_notification_channel_description" translatable="true">Get order</string>
    <string name="fcm_message">New Order Message</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="msg_subscribed">Subscribed to orders topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to orders topic</string>

    <string name="user_name_lbl">User Name</string>
    <string name="password_lbl">Password</string>

    <string name="login">Login</string>

    <string name="login_fragment_lbl">Login</string>
    <string name="orders_fragment_lbl">Đơn Hàng</string>

    <string name="lbl_name">Tên</string>
    <string name="lbl_phone">SDT</string>
    <string name="lbl_city">Tỉnh/Thành Phố</string>
    <string name="lbl_district">Quận/Huyện</string>
    <string name="lbl_ward">Xã/Phường</string>
    <string name="lbl_address">Địa Chỉ</string>
    <string name="lbl_money">Tổng Tiền</string>


    <string name="btn_success">Thành Công</string>
    <string name="btn_cancel">Huỷ Đơn</string>
</resources>